Fix home page CSS contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -78,7 +78,7 @@ nav {
 
         nav a.active {
             background-color: var(--accent2);
-            color: white;
+            color: white !important;
         }
 
 .card {
@@ -111,7 +111,7 @@ footer {
 }
 
     footer #lastModified {
-        color: var(--accent1);
+        color: var(--white);
     }
 
 .text-center {
